--- a/Vet2/vet2css.css
+++ b/Vet2/vet2css.css
@@ -9,14 +9,12 @@ body {
 .Menubar {
     margin: 0;
     position: absolute;
-    top: 1px;
-    left: 1px;
     display: flex;
     padding: 10px;
     padding-left: 50px;
     justify-content: space-between;
     align-items: center;
-    width: 1525px;
+    width: 1525px;  
 }
 
 .Menubar .tool {
@@ -331,26 +329,24 @@ video {
 @media only screen and (max-width: 480px) {
 
     .Menubar {
-        background-color: aqua;
         margin: 0;
         position: absolute;
         height: 50px;
         display: flex;
-        padding-left: 50px;
+        padding-left: 30px;
         justify-content: space-between;
         align-items: center;
-        width: 350px;
+        width: 1000px;
     }
 
     .Menubar .tool {
         display: flex;
         display: -webkit-flex;
-
     }
 
     .tool {
-        font-size: 15px;
-        width: 150px;
+        font-size: 16px;
+        width: 250px;
         justify-content: space-around;
     }
 
@@ -368,8 +364,8 @@ video {
 
     .Picpro {
         position: relative;
-        width: 410px;
-        height: 270px;
+        width: 1040px;
+        height: 450px;
         filter: brightness(50%);
         object-fit: cover;
     }
@@ -382,16 +378,16 @@ video {
 
     .textpro1 {
         position: absolute;
-        top: 30px;
-        font-size: 22px;
-        width: 250px;
-        padding-left: 30px;
+        top: 110px;
+        font-size: 30px;
+        width: 300px;
+        padding-left: 50px;
     }
 
     .textpro2 {
         position: absolute;
-        top: 90px;
-        padding-left: 30px;
+        top: 200px;
+        padding-left: 50px;
         font-size: 16px;
         width: 300px;
     }
@@ -399,8 +395,8 @@ video {
     .buttonpro {
         background-color: #F4F4F4;
         position: absolute;
-        top: 180px;
-        left: 30px;
+        top: 300px;
+        left: 50px;
         font-size: 18px;
         width: 100px;
         text-align: center;
@@ -411,7 +407,7 @@ video {
 
 
     .page1 {
-        height: 120px;
+        height: 300px;
         width: auto;
         margin: 0;
         position: relative;
@@ -420,135 +416,135 @@ video {
     }
 
     .woman1 {
-        width: 100px;
-        height: 125px;
+        width: 220px;
+        height: 245px;
         object-fit: cover;
         text-align: center;
     }
 
     .textbox1 {
         position: absolute;
-        top: 20px;
-        left: 30px;
-        width: 150px;
+        top: 50px;
+        left: 200px;
+        width: 250px;
     }
 
     .textbox2 {
         position: absolute;
-        top: 20px;
-        left: 230px;
-        width: 150px;
+        top: 50px;
+        left: 640px;
+        width: 250px;
     }
 
     .textbox3 {
         position: absolute;
-        left: 20px;
-        top: 150px;
-        width: 150px;
+        left: 160px;
+        top: 250px;
+        width: 250px;
     }
 
     .textbox4 {
         position: absolute;
-        left: 250px;
-        top: 150px;
-        width: 150px;
+        left: 690px;
+        top: 250px;
+        width: 250px;
     }
 
     .womanfix {
         position: absolute;
-        left: 135px;
-        top: 55px;
-        width: 130px;
+        left: 390px;
+        top: 80px;
+        width: 300px;
         text-align: center;
     }
 
     .headp1 {
         font-weight: bold;
-        font-size: 15px;
+        font-size: 22px;
     }
 
     .textp1 {
         padding-left: 15px;
-        font-size: 10px;
+        font-size: 16px;
     }
 
 
 
     .page2 {
-        width: 390px;
+        width: 1020px;
         margin: 0;
         position: relative;
         padding: 10px;
-        height: 440px;
+        height: 480px;
         background-color: #CDE0EB;
     }
 
     .headpage2 {
         position: absolute;
-        left: 150px;
-        top: 20px;
-        font-size: 22px;
+        left: 450px;
+        top: 40px;
+        font-weight: bolder;
+        font-size: 30px;
     }
 
     .textbox1p2 {
         position: absolute;
-        top: 80px;
-        left: 50px;
-        width: 150px;
+        top: 120px;
+        left: 110px;
+        width: 250px;
     }
 
     .textbox2p2 {
         position: absolute;
-        top: 80px;
-        left: 230px;
-        width: 150px;
+        top: 120px;
+        left: 420px;
+        width: 250px;
     }
 
     .textbox3p2 {
         position: absolute;
-        left: 50px;
-        top: 200px;
-        width: 150px;
+        left: 730px;
+        top: 120px;
+        width: 250px;
     }
 
     .textbox4p2 {
         position: absolute;
-        left: 230px;
-        top: 200px;
-        width: 150px;
+        left: 100px;
+        top: 300px;
+        width: 250px;
     }
 
     .textbox5p2 {
         position: absolute;
-        left: 50px;
-        top: 320px;
-        width: 150px;
+        left: 420px;
+        top: 300px;
+        width: 250px;
     }
 
     .textbox6p2 {
         position: absolute;
-        left: 230px;
-        top: 320px;
-        width: 150px;
+        left: 730px;
+        top: 300px;
+        width: 250px;
     }
 
 
     .page3 {
-        background-color: aqua;
-        width: 390px;
+        width: 1020px;
         margin: 0;
         position: relative;
         padding: 10px;
-        height: 150px;
-        ;
+        height: 450px;
     }
 
     .headpage3 {
         position: absolute;
-        left: 120px;
-        top: 20px;
+        left: 410px;
+        top: 40px;
         text-align: center;
-        font-size: 22px;
+        font-weight: bolder;
+        font-size: 30px;
 
     }
 
@@ -557,31 +553,31 @@ video {
     } */
     .doctor1 {
         position: absolute;
-        top: 40px;
-        left: 190px;
-        width: 100px;
+        top: 120px;
+        left: 130px;
+        width: 200px;
         text-align: center;
     }
 
     .doctor2 {
         position: absolute;
-        top: 40px;
-        left: 640px;
-        width: 100px;
+        top: 120px;
+        left: 430px;
+        width: 200px;
         text-align: center;
     }
 
     .doctor3 {
         position: absolute;
-        top: 40px;
-        left: 1090px;
-        width: 100px;
+        top: 120px;
+        left: 740px;
+        width: 200px;
         text-align: center;
     }
 
     .imgdr {
-        width: 50px;
-        height: 60px;
+        width: 200px;
+        height: 210px;
         object-fit: cover;
     }
 
@@ -589,7 +585,7 @@ video {
     
     } */
     .nametext {
-        font-size: 18px;
+        font-size: 22px;
     }
 
     .textmajor {
@@ -597,7 +593,7 @@ video {
     }
 
     .pagesup {
-        width: 1525px;
+        width: 990px;
         position: relative;
         padding: 30px;
         background-color: #A7D5E1;
@@ -606,15 +602,15 @@ video {
     }
 
     .textsup {
-        width: 1300px;
-        font-size: 20px;
+        width: 800px;
+        font-size: 16px;
         padding-top: 5px;
     }
 
     .buttonsup {
         position: absolute;
-        left: 1400px;
-        top: 35px;
+        left: 860px;
+        top: 30px;
         width: 150px;
         height: 50px;
         font-size: 20px;
@@ -625,29 +621,30 @@ video {
         display: grid;
         grid-template-columns: auto auto auto auto;
         background-color: #CDE0EB;
-        width: 1585px;
+        width: 1050px;
+        
     }
 
     /* .videogriditem1{
     
     } */
     .griditem1 {
-        padding: 35px;
+        padding: 20px;
     }
 
     video {
-        width: 395px;
-        height: 395px;
+        width: 260px;
+        height: 260px;
         object-fit: cover;
     }
 
     .textpage4 {
-        font-size: 20px;
+        font-size: 16px;
     }
 
     .footerpage {
         background-color: #909CA5;
-        width: 1585px;
+        width: 1050px;
         height: 200px;
     }
 
